argocd/kustomize/base/vault-configs/vault-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vault-route
  namespace: vault
spec:
  hostnames:
  - vault.rajesh-kumar.in
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: common-server-gateway 
    namespace: common-gateway
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: rancher-master-vault
      port: 8200
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
